# electron-node-addon

./: README.md  build.js  package-lock.json  package.json
src/electron/: index.html  main.js  renderer.js
src/node-addon/: CMakeLists.txt
src/node-addon/context_aware/: CMakeLists.txt  main.cc
src/node-addon/hello_world/: CMakeLists.txt  main.cc
