
project(hello_world)

include_directories(${CMAKE_JS_INC})

file(GLOB SOURCE_FILES *.cc)

add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})

set_target_properties(${PROJECT_NAME} PROPERTIES
    PREFIX                                  ""
    SUFFIX                                  ".node"
	LIBRARY_OUTPUT_DIRECTORY				${PROJECT_OUTPUT_DIR}
	LIBRARY_OUTPUT_DIRECTORY_DEBUG			${PROJECT_OUTPUT_DIR}
	LIBRARY_OUTPUT_DIRECTORY_RELEASE		${PROJECT_OUTPUT_DIR}
	LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO	${PROJECT_OUTPUT_DIR}
	RUNTIME_OUTPUT_DIRECTORY				${PROJECT_OUTPUT_DIR}
	RUNTIME_OUTPUT_DIRECTORY_DEBUG			${PROJECT_OUTPUT_DIR}
	RUNTIME_OUTPUT_DIRECTORY_RELEASE		${PROJECT_OUTPUT_DIR}
	RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${PROJECT_OUTPUT_DIR}
)

target_link_libraries(${PROJECT_NAME} ${CMAKE_JS_LIB})